# squinchwerms

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  example.sqw  flake.nix
assets/shaders/: biplanar_mapping.frag  passthrough.vert
src/: allo_impl.c  body.cpp  body.h  bytes.h  debug_draw.cpp  debug_draw.h  game.h  intshorthand.h  level.c  level.cpp  level.h  linked_pool.h  main.c  main.cpp  physics.c  physics.cpp  physics.h  rect.c  rect.h  shape.c  shape.cpp  shape.h  space.cpp  space.h  terrain.cpp  terrain.h  tesselator.cpp  tesselator.h  vect.c  vect.cpp  vect.h
src/allocators/: global.c  global.h  stack.c  stack.h  static_block.c  static_block.h
src/json/: json_space.cpp  json_space.h
src/memory/: align.c  align.h
src/natural_log/: natural_log.cpp  natural_log.h
src/structures/: pointer_collection.c  pointer_collection.h
